<resources>
    <string name="app_name">Safe You</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="sos_application"><b><i>SOS APPLICATION</i></b></string>
    <string name="welcome"><u>WELCOME</u></string>
    <string name="do_not_have_an_account">Do not Have An Account??</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="new_user"><u>NEW USER</u></string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot">FORGOT</string>
    <string name="submit">SUBMIT</string>
    <string name="retrieve_account"><u>RETRIEVE ACCOUNT</u></string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="note_your_password_must_contain_6_letters">NOTE : YOUR PASSWORD MUST CONTAIN 6 LETTERS</string>
    <string name="safe_you"><u>SAFE YOU</u></string>
    <string name="an_women_safety_android_app">A WOMEN SAFETY ANDROID APP</string>
    <string name="sos">SOS</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="an_sos_message_will_be_sent_to_the_number">AN SOS message will be sent to the number</string>
    <string name="police_100">POLICE : 100</string>
    <string name="women_helpline_181">WOMEN HELPLINE : 181</string>
    <string name="ambulance_102">AMBULANCE : 102</string>
    <string name="safety_places">Safety Places</string>
    <string name="confirm_logout"><u>𝐂𝐎𝐍𝐅𝐈𝐑𝐌 𝐋𝐎𝐆𝐎𝐔𝐓</u></string>
    <string name="do_you_really_want_to_logout">DO YOU REALLY WANT TO LOGOUT??</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">LOGOUT</string>
    <string name="get_nearest_police_station_location">GET NEAREST POLICE STATION LOCATION</string>
    <string name="get_nearest_hospital_location">GET NEAREST HOSPITAL LOCATION</string>
    <string name="get_nearest_atm_location">GET NEAREST ATM LOCATION</string>
    <string name="get_nearest_fire_station_location">GET NEAREST FIRE STATION LOCATION</string>
    <string name="user_profile">User Profile</string>
    <string name="quick_contacts">Quick Contacts</string>
    <string name="about_us">About Us</string>
    <string name="self_defence_tips">Self Defence Tips</string>
    <string name="safety_products">Safety Products</string>
    <string name="about_us_description">The SOS Women Safety Android application is a robust and versatile tool meticulously crafted to prioritize the safety and security of women in diverse scenarios. With its Emergency SOS Button and One-click Calling to Emergency helplines, users can swiftly alert designated contacts and authorities, ensuring immediate assistance during critical situations. The app seamlessly integrates Location Tracking and Contacts, enabling efficient communication and precise tracking of user whereabouts. Customizable Alerts and Audio Calling features offer flexibility and convenience, adapting to individual preferences and needs. Moreover, User Profiles allow for personalized settings and contact management, enhancing user experience and accessibility. The application\'s Offline Functionality ensures uninterrupted access to essential features even in areas with limited connectivity, bolstering its reliability in emergencies. Privacy and Security measures are meticulously implemented to safeguard user data and uphold confidentiality, instilling trust and confidence among users. Accessibility features cater to diverse needs, ensuring inclusivity and usability for all individuals. Furthermore, the app provides avenues for Feedback and Reporting, fostering continuous improvement and enabling users to contribute to the enhancement of safety measures. </string>
    <string name="about_us_heading"><b><i>ABOUT US</i></b></string>
    <string name="safety_product_heading">Some Woman Safety Gadgets Which Will Be Your Ultimate Saviour</string>
    <string name="safelet">Safelet</string>
    <string name="pepper_spray_pistol">Pepper Spray </string>
    <string name="safer_smart_pendant">Safer Smart Pendant</string>
    <string name="safety_rod">Safety Rod</string>
    <string name="self_defence_product">Self Defence Product </string>
    <string name="_9990">₹9990</string>
    <string name="safer_pendant">Safer Pendant</string>
    <string name="alarm_wristlet">Alarm Wristlet</string>
    <string name="safety_torch">Safety Torch</string>
    <string name="sound_grenade">Sound Grenade</string>
    <string name="revolar">Revolar</string>
    <string name="product_name_safelet">Product Name : <b>Safelet</b></string>
    <string name="price_9990">Price : <b>₹9990</b></string>
    <string name="discount_13320">Discount : <b>₹1̶3̶3̶2̶0̶</b></string>
    <string name="safelet_description">Safelet is wearable women safety device with two buttons on the side that can be used to send a message or contact the guardian member. It also syncs with the user’s cell phone to start audio recording. In case of risky situation, the concerned member who receives the alert can immediately dial the emergency number 112 from within the app.</string>
    <string name="product_name_Pepper_Spray_Pistol">Product Name : <b>Pepper Spray Pistol</b></string>
    <string name="price_6000">Price : <b>₹6000</b></string>
    <string name="discount_12000">Discount : <b>₹1̶2̶0̶0̶0̶</b></string>
    <string name="pepper_spray_description">Pepper spray pistol is among the legally approved women self-defence appliances. It is way different than other pepper sprays as it doesn’t require to be sprayed on eyes. As this spray act as irritant affecting the eyes and skin of the person. Always remember two sprays are capable to affect the attacker. If you spray continuously then the bottle will be emptied in 6 seconds.</string>
    <string name="product_name_Safer_Smart_Pendant">Product Name : <b>Safer Smart Pendant</b></string>
    <string name="price_1899">Price : <b>₹1899</b></string>
    <string name="discount_2370">Discount : <b>₹2̶3̶7̶0̶</b></string>
    <string name="product_name_Safety_Rod">Product Name : <b>Safety Rod</b></string>
    <string name="price_790">Price : <b>₹790</b></string>
    <string name="discount_1329">Discount : <b>₹1̶3̶2̶0̶̶</b></string>
    <string name="product_name_Alarm_Wristlet_Whistle">Product Name : <b>Alarm Wristlet With Whistle</b></string>
    <string name="price_450">Price : <b>₹450</b></string>
    <string name="discount_1130">Discount : <b>₹1̶1̶3̶0̶̶</b></string>
    <string name="product_name_Safety_Tourch">Product Name : <b>Safety Tourch</b></string>
    <string name="discount_1320">Discount : <b>₹1̶3̶2̶0̶</b></string>
    <string name="product_name_Sound_Grenade">Product Name : <b>Sound Grenade</b></string>
    <string name="price_999">Price : <b>₹999</b></string>
    <string name="product_name_Revolar">Product Name : <b>Revolar</b></string>
    <string name="price_6543">Price : <b>₹6543</b></string>
    <string name="discount_6983">Discount : <b>₹6̶9̶8̶3̶</b></string>
    <string name="safety_rod_description">The telescopic batons can be played very well for both offence and defence techniques in self-defense. Safety rods can deliver a massive pain with a shock to the attacker. The simple motto of this device is to save you from all the risky people.</string>
    <string name="Alarm_Wristlet_Description">Personal Alarm Wristlet with a hidden whistle is specially designed for women safety. It is placed in outer pockets of a purse or backpack and can be hand-carried. The alarm is activated when the pin is pulled and detects the attacker. It also has an LED Light which will never leave you in the dark.</string>
    <string name="safety_tourch_description">Rechargeable safety torch with shock effect can be the saviour for women. The LED Flashlight with hidden electricity can shake a person very badly. Such personal protection equipment should be considered as the must carry essential of women’s bag.</string>
    <string name="sound_grenade_ealarm_description">Sound Grenade is a non-lethal product that loud 120 Db Siren that weighs only 20 Grams. It is created specially to prevent you from thefts, rapes, mugging or any other risky situation by sending an alarm to anyone in the range of sound within 100 meters.</string>
    <string name="revolar_description">Revolar is an oval-shaped look like a small garage clicker. It is easily kept onto a jeans pocket or sports bra. When it is pressed twice then it sends a yellow message to the designated contacts with your current location and telling that you are not safe. The red message is sent when the revolar is clicked thrice. So, carry this beneficial women safety device for the protection.</string>
    <string name="safety_pendant_description">This pendant is not the normal pendant. As it has a small circular device known as SAFER. Whenever you feel unsafe, just double-click the safer device attached to the pendant. Then automatically an alert will be sent to your family or friends. Because of the GPS function, your location can be sent in the alert.</string>
    <string name="make_payment">Make Payment</string>
    <string name="credentials">Credentials</string>
    <string name="self_defence_strategies">10 Self Defense Strategies Every Woman Needs To Know</string>
    <string name="Strategy1_Heading"><br>Strategy #1 \n</br>Awareness of Surroundings and the People In Them </string>
    <string name="strategy1_description"><br>Awareness is as simple as it is powerful. It deters criminals, lets you detect threats ahead of time and gives your intuition the information it needs to protect you. An alert person is more difficult to attack than a distracted person and therefore less likely to be selected for crime.\n</br>
        <br>\n</br>Predators aim to catch victims off guard so that by the time they realize what\'s happening it\'s too late. Your eyes, ears, and intuition have been perfected over centuries for the sole purpose of keeping you alive. They are highly effective survival tools- never allow them to be shut down in public.</string>
    <string name="strategy2_Header"><br>Strategy #2\n</br>Trust Your Instincts</string>
    <string name="strategy2_description">Many women who were attacked say they had a bad feeling beforehand but ignored it. In order to not appear rude or paranoid we so often interrogate and deny our own survival instincts. But that gut feeling that something isn\'t right is the most important warning sign that you are not safe. Instincts work faster than intellect when it comes to your safety and require no further validation. Always listen to your gut feeling about a person, place or situation.</string>
    <string name="strategy3_header"><br>Strategy #3\n</br>Present Yourself Confidently</string>
    <string name="strategy3_description">Body language is one of the most important indicators of a persons willingness to fight back. Studies show that predators judge vulnerability by observing how people walk. Someone who walks confidently with their shoulders back and head up and moves swiftly with purpose is perceived to be likely and capable of standing up for themselves. Someone who hangs their head, avoids eye contact, and walks with a sense of defeatedness is perceived to be unlikely to put up a fight. Confident body language is what tells a predator within a seconds glance that you are not an easy target. When you move, move with confidence.</string>
    <string name="strategy4_header"><br>Strategy #4\n</br>Deny Attack Opportunities</string>
</resources>