<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    tools:context=".Login_Page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/corner_design"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/login_logo"
            android:contentDescription="@string/todo1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="-15dp"
            app:cardCornerRadius="20dp"
            tools:ignore="TextSizeCheck,VisualLintBounds">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fef9ef"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/welcome"
                    android:textColor="#a53860"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:boxStrokeColor="#a53860"
                    app:boxStrokeWidth="2dp"
                    app:cursorColor="#a53860"
                    app:hintTextColor="#a53860"
                    app:boxBackgroundColor="#ffffff"
                    android:hint="@string/email"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        tools:ignore="VisualLintTextFieldSize"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:boxStrokeColor="#a53860"
                    app:boxStrokeWidth="2dp"
                    app:cursorColor="#a53860"
                    app:boxBackgroundColor="#ffffff"
                    app:hintTextColor="#a53860"
                    android:hint="@string/password"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        tools:ignore="VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/SignUp_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/do_not_have_an_account"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:contextClickable="true"/>

                    <TextView
                        android:id="@+id/ForgotPassword_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:layout_marginEnd="5dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:contextClickable="true"/>

                </LinearLayout>

                <Button
                    android:id="@+id/Login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="100dp"
                    android:background="#a53860"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    app:cornerRadius="10dp"
                    tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:contentDescription="@string/todo2"
                        android:paddingBottom="20dp"
                        android:src="@drawable/bottom_design"/>
                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>